--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="content-wrapper">
             <h1>Retreat from the desk, return refreshed.</h1>
             <img src="img/lady-trees.jpg" alt="unplugged">
-          <div>
+          </div>
         </section>
 
         <aside>
