--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <![endif]-->
       <header>
         <div class="content-wrapper">
-          <a href="#"><img src="img/logo.png" alt="unplugged logo"></a>
+          <figure>
+            <a href="#"><img src="img/logo.png" alt="unplugged logo"></a>
+          </figure>
           <div class="header-divider"></div>
           <nav>
             <ul>
