styles coming together

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
               <h4>Social</h4>
                 <div class="social-icons">
                   <ul>
-                    <li><a href="facebook.com" target="_blank"></a></li>
-                    <li><a href="twitter.com" target="_blank"></a></li>
-                    <li><a href="instagram.com" target="_blank"></a></li>
+                    <li><a href="facebook.com" target="_blank">F</a></li>
+                    <li><a href="twitter.com" target="_blank">T</a></li>
+                    <li><a href="instagram.com" target="_blank">I</a></li>
                   </ul>
                 </div>
             </div>
