--- a/about/index.html
+++ b/about/index.html
@@ -53,6 +53,9 @@
 
     <section class="map">
       <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.126453502308!2d-119.23069028430977!3d34.168684480574456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e84e1e58dbc5f1%3A0xbb1fd103f449e66e!2sSea%20Fresh%20Channel%20Islands!5e0!3m2!1sen!2sus!4v1575426132821!5m2!1sen!2sus"
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="">
+        </iframe>
       </figure>
     </section>
 
