--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+<script src="https://kit.fontawesome.com/01779712aa.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -67,19 +68,19 @@
             <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
               <div class="features-items">
                 <article>
-                  <p class="fontawesome-icon"></p>
+                  <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
                   <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-                  <p class="fontawesome-icon"></p>
+                  <p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
                   <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-                  <p class="fontawesome-icon"></p>
+                  <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
                   <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
                 </article>
                 <article>
-                  <p class="fontawesome-icon"></p>
+                  <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
                   <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-                  <p class="fontawesome-icon"></p>
+                  <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
                   <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-                  <p class="fontawesome-icon"></p>
+                  <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
                   <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
                 </article>
               </div>
