icon css updates

--- a/faq/index.html
+++ b/faq/index.html
@@ -75,11 +75,15 @@
         <div class="social-media">
           <h4>Social</h4>
             <div class="social-icons">
-              <ul>
-                <li><a href="facebook.com" target="_blank"></a></li>
-                <li><a href="twitter.com" target="_blank"></a></li>
-                <li><a href="instagram.com" target="_blank"></a></li>
-              </ul>
+              <p>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+              </p>
+              <p>
+                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+              </p>
             </div>
         </div>
 
