--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <div class="header-divider"></div>
           <nav>
             <ul>
-              <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-              <li><a href="about/index.html" target="_blank">About</a></li>
+              <li><a href="faq/index.html">FAQ</a></li>
+              <li><a href="about/index.html">About</a></li>
             </ul>
           </nav>
         </div>
@@ -56,8 +56,8 @@
               <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
             </div>
             <div class="form">
-              <h3>Find out more</h3>
-              <input type="text" name="name" value="email address">
+              <h3>Discover More</h3>
+              <input type="text" name="name" value="E-mail Address Here">
               <input type="button" value="Download Itinerary">
             </div>
           </div>
@@ -110,7 +110,7 @@
           <div class="footer-content">
             <address class="contact">
               <h4>Contact</h4>
-              <p>555-555-555<br>
+              <p>1-800-565-5665<br>
               hello@unplugged.com</p>
             </address>
 
