--- a/about/index.html
+++ b/about/index.html
@@ -27,12 +27,12 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="../img/logo.png" alt="unplugged logo"></a>
+      <a href="../index.html"><img src="../img/logo.png" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="index.html" target="_blank">About</a></li>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -66,12 +66,12 @@
             <div>
               <h4>General Information</h4>
               <p>333 Main St, Lake Geneva, WI 53147<br>
-                  555-555-5555<br>
+                  1-800-565-5665<br>
                   hello@unplugged.com</p>
             </div>
             <div>
               <h4>Chat with a Facilitator</h4>
-              <p>555-555-5555<br>
+              <p>1-800-565-5665<br>
               hello@unplugged.com</p>
             </div>
           </address>
@@ -85,7 +85,7 @@
       <div class="footer-content">
         <address class="contact">
           <h4>Contact</h4>
-          <p>555-555-555<br>
+          <p>1-800-565-5665<br>
           hello@unplugged.com</p>
         </address>
 
