--- a/faq/index.html
+++ b/faq/index.html
@@ -29,12 +29,12 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="../img/logo.png" alt="unplugged logo"></a>
+      <a href="../index.html"><img src="../img/logo.png" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="index.html" target="_blank">FAQ</a></li>
-          <li><a href="../about/index.html" target="_blank">About</a></li>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -68,7 +68,7 @@
       <div class="footer-content">
         <address class="contact">
           <h4>Contact</h4>
-          <p>555-555-555<br>
+          <p>1-800-565-5665<br>
           hello@unplugged.com</p>
         </address>
 
